applications/xihe-test-v2-website/xihe-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xihe-backend-service
  namespace: xihe-test-v2-website
spec:
  ports:
  - name: httpport
    port: 80
    targetPort: 8000
  selector:
    app: xihe-server
  type: ClusterIP
