applications/xihe-test-v2-website/xihe-server/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: xihe-server-ingress
  namespace: xihe-test-v2
spec:
  rules:
  - host: xihe-server2.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: xihe-backend-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - xihe-server2.test.osinfra.cn
    secretName: xihe-test-osinfra-cn-tls
